--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                   <input type="text" class="form-control" placeholder="Nombre">
                 </div>
                 <div class="form-group col-6">
-                  <input type="text" class="form-control" placeholder="Apellido">
+                  <input type="text" class="form-control" placeholder="Apellidos">
                 </div>
               </div>
 
