Cambio nombre paula

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
           
           <div class="col-lg-6">
-            <h4>Paula Rjas M.</h4>
+            <h4>Paula Rojas M.</h4>
             <p>Administradora de Empresas de la Pontificia Universidad Javeriana y con
               especialización en Comunicación Corporativa. Con estudios en Asesoría de Imagen,
               Personal Branding y certificada como Consultora Internacional del London School of
